scripts/nullaway/annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8.txt
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/CommandException.java:105: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        else return lMsg;
             ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/CommandRepository.java:37: error: [NullAway] returning @Nullable expression from method with @NonNull return type
		return commands.get(aName);
		^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/repl/ReplEngine.java:143: error: [NullAway] initializer method does not guarantee @NonNull field input (line 66) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public ReplEngine()
           ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/repl/ReplEngine.java:168: error: [NullAway] dereferenced expression output is @Nullable
            if(interactiveMode) output.println();
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/repl/ReplEngine.java:349: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return lastResult;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/repl/ReplEngine.java:380: error: [NullAway] dereferenced expression output is @Nullable
       output.print(aTxt);
             ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/repl/ReplEngine.java:392: error: [NullAway] dereferenced expression output is @Nullable
        output.println(aLine);
              ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/repl/ReplEngine.java:398: error: [NullAway] dereferenced expression error is @Nullable
        error.println(aLine);
             ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/Pair.java:49: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return right;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/CompositeContext.java:64: error: [NullAway] method returns @Nullable, but superclass method com.sdicons.scripty.parser.IContext.getRootContext() returns @NonNull
    @Nullable public IContext getRootContext()
                              ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/Eval2.java:94: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return expr;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/Eval2.java:321: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return stack;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/Eval2.java:583: error: [NullAway] dereferenced expression lFrame.getHandler() is @Nullable
                    lFrame.getHandler().init(aStack, lFrame);
                                       ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/EvalTrace.java:397: error: [NullAway] initializer method does not guarantee @NonNull field stack (line 38) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public EvalTrace(final Eval2 aEval, final Object aExpr)
           ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/EvalTrace.java:597: error: [NullAway] returning @Nullable expression from method with @NonNull return type
            return null;
            ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/parser/BasicContext.java:35: error: [NullAway] method returns @Nullable, but superclass method com.sdicons.scripty.parser.IContext.getBinding(java.lang.String) returns @NonNull
	@Nullable public Object getBinding(String aKey)
	                        ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/ScriptyEmbeddedRepl.java:81: error: [NullAway] dereferenced expression server is @Nullable
                Socket socket = server.accept();
                                      ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/cmdlib/DebuggerLibrary.java:59: error: [NullAway] assigning @Nullable expression to @NonNull field
    private EvalTrace trace = null;
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/cmdlib/DebuggerLibrary.java:60: error: [NullAway] assigning @Nullable expression to @NonNull field
    private  EvalTrace.BreakpointSet breakpoints = null;
                                     ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/cmdlib/DebuggerLibrary.java:279: error: [NullAway] dereferenced expression trace.getException() is @Nullable
                aWriter.println(trace.getException().getMessage());
                                                    ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/cmdlib/DebuggerLibrary.java:360: error: [NullAway] assigning @Nullable expression to @NonNull field
        trace = null;
              ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/cmdlib/FileDialogLibrary.java:126: error: [NullAway] assigning @Nullable expression to @NonNull field
    private Hashtable filters = null;
                      ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/cmdlib/FileLibrary.java:91: error: [NullAway] dereferenced expression lCurDir is @Nullable
            if (!aQuiet) aWriter.println(lCurDir.getCanonicalPath());
                                                ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/spec/args/OptionalArg.java:48: error: [NullAway] initializer method does not guarantee @NonNull field defaultVal (line 46) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public OptionalArg(ITypeSpec aSpec, @Nullable Object aVal)
           ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/spec/args/OptionalArg.java:51: error: [NullAway] assigning @Nullable expression to @NonNull field
        defaultVal = aVal;                
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/spec/args/NamedArg.java:80: error: [NullAway] passing @Nullable parameter 'value' where @NonNull is required
            if(optional) return valueSpec.guard(value, aCtx);
                                                ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/spec/type/InstanceOrBinding.java:42: error: [NullAway] dereferenced expression aCtx is @Nullable
            if(aArg instanceof String && aCtx.isBound((String) aArg))
                                             ^
    (see http://t.uber.com/nullaway )
../annotator/url71665d7d68_branscha_lib_scripty_tgz-pJ8-com_sdicons_scripty_ScriptyAutoReplJ8/src/com/sdicons/scripty/spec/type/InstanceType.java:47: error: [NullAway] method returns @Nullable, but superclass method com.sdicons.scripty.spec.type.ITypeSpec.guard(java.lang.Object,com.sdicons.scripty.parser.IContext) returns @NonNull
    public Object guard(Object aArg, @Nullable IContext aCtx) 
                  ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
28 errors
